updated lingist.css fixed overflowing content

--- a/linguist.css
+++ b/linguist.css
@@ -29,7 +29,7 @@ main>div{
     border: none;
     border-radius: 10px;
     color: white;
-    font-size: 100%;
+    font-size: 150%;
     text-align: center;
     height: fit-content;
     margin: 2vw auto;
@@ -75,7 +75,7 @@ main>div{
     margin-top: 20px;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 1000px) {
     main{
         font-size: 15px;
     }
